UI changes for header and left section list

--- a/src/app/inbox/item-views/audio-compact-view.html
+++ b/src/app/inbox/item-views/audio-compact-view.html
@@ -1,4 +1,4 @@
-<div class="md-3-line" [class.active]="selected == audioContent.id" >
+<div class="audio-compact" [class.active]="selected == audioContent.id" >
   <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
   <div class="client-section" style="width:80px;float:left;">
     <span><img src="app/inbox/images/recording.png"> </span>
