--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -1,4 +1,4 @@
-<div class="md-3-line" [class.active]="selected == order.id">
+<div class="order-compact" [class.active]="selected == order.id">
   <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
   <div class="client-section" style="width:80px;float:left;">
     <span><img src="app/inbox/images/mobile-app.png"> </span>
