--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -146,7 +146,8 @@
         <div flex class="client-section">
           <img class="client-img" src="app/share/images/company-logo/infosys.png">
         </div>
-        <select  [(ngModel)]="selectedCustomerObject" (ngModelChange)="getCustomerDetails($event)">
+        <!--<div>{{selectedCustomer.fromCompany}}</div>-->
+        <select  [(ngModel)]="selectedCustomer" (ngModelChange)="getCustomerDetails($event)">
           <option selected="selected">Choose Customer</option>
           <option *ngFor="#customer of allCustomers" [value]="customer._id">{{customer.fromCompany}}</option>
           <option>Add a New Customer</option>
