--- a/src/app/share/components/header.component.scss
+++ b/src/app/share/components/header.component.scss
@@ -1,4 +1,4 @@
-@import "../../../app/variabel.scss";
+@import "../../../app/variable.scss";
 
 .search {
   height: 27px;
@@ -73,6 +73,7 @@ nav {
       display: none;
       top: 32px;
       max-width: 120px;
+      z-index: 999;
       ul {
         margin: 0px;
         padding: 0px;
